# clustering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  result.json  setup.py  test.py  test2.py  tw_gt_86.m
MotionSegmentationCode/: references.bib
MotionSegmentationCode/MatlabCodeTMM/: addPath.m
MotionSegmentationCode/MatlabCodeTMM/MotionSegmentation/: call_segmentation.m  run_segmentation.m  test.m  tw_get_k_min.m  tw_segmentation.m
aca/: runAca.m  runGmm.m  runHaca.m
data/: groundtruth86.json
data_athens/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  (+89 more)
data_cmu/: groundtruth86.json  groundtruth86Simplified.json
data_drifters/: convertToWorld3d.py
data_drifters/world2d_split_txt/: 1.txt  10.txt  100.txt  1003.txt  1004.txt  1008.txt  1010.txt  1011.txt  1013.txt  1016.txt  1018.txt  1019.txt  1020.txt  1021.txt  1023.txt  1024.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1033.txt  1034.txt  1036.txt  1037.txt  1039.txt  104.txt  1041.txt  1045.txt  1046.txt  1047.txt  1049.txt  105.txt  1050.txt  1051.txt  1052.txt  1054.txt  1055.txt  1056.txt  1059.txt  (+1112 more)
data_drifters/world3d_txt/: 0.txt  1000.txt  1000_drifter.txt  1001.txt  1001_drifter.txt  1002.txt  1002_drifter.txt  1003_drifter.txt  1004_drifter.txt  1005.txt  1005_drifter.txt  1006.txt  1006_drifter.txt  1007.txt  1007_drifter.txt  1008_drifter.txt  1009.txt  1009_drifter.txt  100_drifter.txt  101.txt  1010_drifter.txt  1011_drifter.txt  1012.txt  1012_drifter.txt  1013_drifter.txt  1014.txt  1014_drifter.txt  1015.txt  1015_drifter.txt  1016_drifter.txt  1017.txt  1017_drifter.txt  1018_drifter.txt  1019_drifter.txt  101_drifter.txt  102.txt  1020_drifter.txt  1021_drifter.txt  1022.txt  1022_drifter.txt  (+6599 more)
data_opensky/worldwide/: flights000.txt  flights001.txt  flights002.txt  flights003.txt  flights004.txt  flights005.txt  flights006.txt  flights007.txt  flights008.txt  flights009.txt  flights010.txt  flights011.txt  flights012.txt  flights013.txt  flights014.txt  flights015.txt  flights016.txt  flights017.txt  flights018.txt  flights019.txt  flights020.txt  flights021.txt  flights022.txt  flights023.txt  flights024.txt  flights025.txt  flights026.txt  flights027.txt  flights028.txt  flights029.txt  flights030.txt  flights031.txt  flights032.txt  flights033.txt  flights034.txt  flights035.txt  flights036.txt  flights037.txt  flights038.txt  flights039.txt  (+937 more)
data_unid/: 0.txt  1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  (+322 more)
experiments/: aca.py  athens.py  chicago.py  cmu.py  cmuGridsearch.py  cmuGridsearchAnalyze.ipynb  cmuMeasure.py  cmuMeasureGraph.py  cmuOutput.py  cmuSolvers.py  drifter.py  drifterMeasure.py  drifterSolvers.py  drifterTable.py  drifters.py  experimentDrifters.py  flightSolvers.py  flights.py  genericTable.py  imu.py  imuSolvers.py  ivor.py  refiner.py  refiner2.py  refiner3.py  result.json  solvers.py  solversKlCluster.py  table.py  table2.py  table3.py  unid.py  unidTable.py  unidTable2.py
klcluster.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
new_src/: Candidate.cpp  Candidate.h  Curve.cpp  Curve.h  CurveSimplification.h  FreespaceVisualizer.cpp  FreespaceVisualizer.h  SWatch.h  SparseFreespace.cpp  SparseFreespace.h  center_clustering_algs.cpp  center_clustering_algs.h  defs.h  geometry_types.cpp  geometry_types.h  io.cpp  main.cpp
old_src/: center_algs.cpp  clustering_algs.cpp  clustering_algs.h  geometric_algs.cpp  paper_experiments.cpp  unit_tests.cpp
src/: Candidate.cpp  Candidate.h  Curve.cpp  Curve.h  CurveSimplification.cpp  CurveSimplification.h  FreespaceVisualizer.cpp  FreespaceVisualizer.h  SWatch.h  SparseFreespace.cpp  SparseFreespace.h  basic_types.h  candidate.cpp  candidate.h  center_algs.cpp  center_algs.h  center_clustering_algs.cpp  center_clustering_algs.h  curve.cpp  curve.h  curve_simplification.cpp  curve_simplification.h  defs.h  filter.cpp  filter.h  frechet_light.cpp  free_space_visualizer.cpp  free_space_visualizer.h  freespace.cpp  freespace.h  geometric_algs.h  geometry_basics.cpp  geometry_basics.h  geometry_types.h  io.cpp  io.h  main.cpp  paper_experiments.cpp  python_wrapper.cpp  unit_tests.cpp  (+1 more)
tmm/MotionSegmentation/: call_segmentation.m  run_segmentation.asv  run_segmentation.m  tw_segmentation.m
tmm/MotionSegmentation/ann_mwrapper/: ann_compile_mex.m  annquery.m
tmm/MotionSegmentation/clusterMotionSegments/: tw_clusterMotionSegments.m
tmm/MotionSegmentation/dag/: tw_buildDAGmatrix.m  tw_cutDagSingleStartEnd.m
tmm/MotionSegmentation/feature/: tw_extractFeatureSetFromDB.m  tw_extractFeatureSetFromMot.m
tmm/MotionSegmentation/filter/: tw_filterRadius.m
tmm/MotionSegmentation/findMotionSegments/: tw_checkSoftSymmetry.m  tw_fastSubsegments.m  tw_findMotionSegmentsFast.m  tw_mergeMirrorCuts.m
tmm/MotionSegmentation/findMotionSimilarities/: tw_findMotionSimilarities.m  tw_getMirrorNN.m  tw_mergeNN.m
tmm/MotionSegmentation/old/: tw_LNGConnectedComponents.m  tw_computeWeightedNeighborhood.m
tmm/MotionSegmentation/parser/: C_fitRootOrientationsFrameWise.m  C_forwardKinematicsQuat.m  C_forwardKinematicsWrapper.m  addVelToMot.m  changeFrameRate.m  computeBoundingBox.m  computeProjectionKernelBased.m  (+22 more)
(+261 files in other folders)
